projeto refatorado para git pages

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="/img/ApacheKafka.svg" alt="Livro Kafka"></div>
+                <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt="Livro Kafka"></div>
                 <div class="swiper-slide"><img src="img/Arquitetura.svg" alt="Livro Arquitetura"></div>
                 <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro de Javascript"></div>
                 <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro de Portugol"></div>
@@ -150,7 +150,7 @@
                 <!-- Additional required wrapper -->
                 <div class="swiper-wrapper">
                 <!-- Slides -->
-                <div class="swiper-slide"><img src="/img/ApacheKafka.svg" alt="Livro Kafka"></div>
+                <div class="swiper-slide"><img src="img/ApacheKafka.svg" alt="Livro Kafka"></div>
                 <div class="swiper-slide"><img src="img/Arquitetura.svg" alt="Livro Arquitetura"></div>
                 <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro de Javascript"></div>
                 <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro de Portugol"></div>
@@ -166,7 +166,7 @@
                 <div class="card__descricao">
                     <!--1° coluna-->
                     <div class="descricao">
-                        <img src="/img/Estrelinhas.svg" alt="Rate 5 estrelas" class="descricao__estrelas">
+                        <img src="img/Estrelinhas.svg" alt="Rate 5 estrelas" class="descricao__estrelas">
                         <h3 class="descricao__titulo">Autora do Mês</h3>
                         <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
                         <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End. </p>
